--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -24,7 +24,7 @@ provider:
   runtime: nodejs12.x
   region: us-west-2
   timeout: 60 # optional, in seconds, default is 6
-  environment: 
+  environment:
     CLIENT_ID: ${file(config.json):CLIENT_ID}
     CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
     PROJECT_ID: ${file(config.json):PROJECT_ID}
@@ -67,17 +67,25 @@ provider:
 functions:
   getAuthURL:
     handler: handler.getAuthURL
-    environment:
-      events: 
-        - http:
-            path: api/get-auth-url
-            method: get
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
+          cors: true
   getAccessToken:
     handler: handler.getAccessToken
     events:
       - http:
           path: api/token/{code}
           method: get
+          cors: true
+  getCalendarEvents:
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
+          method: get
+          cors: true
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
